z-index of home img fixed

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -231,6 +231,7 @@ img{
   right: 0;
   bottom: 0;
   width: 300px;
+  z-index: -1;
 }
 
 /*BUTTONS*/
